# tgbotxx

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  README.md  SECURITY.md  TODO_TG_API_v9_5.md  _a-example.html  _accepted_gift_types_8hpp.html  _accepted_gift_types_8hpp.js  _accepted_gift_types_8hpp_source.html  _affiliate_info_8hpp.html  _affiliate_info_8hpp.js  _affiliate_info_8hpp_source.html  _animation_8hpp.html  _animation_8hpp.js  _animation_8hpp_source.html  _api_8hpp.html  _api_8hpp.js  _api_8hpp_source.html  _audio_8hpp.html  _audio_8hpp.js  _audio_8hpp_source.html  _background_fill_8hpp.html  _background_fill_8hpp.js  _background_fill_8hpp_source.html  _background_type_8hpp.html  _background_type_8hpp.js  _background_type_8hpp_source.html  _birthdate_8hpp.html  _birthdate_8hpp.js  _birthdate_8hpp_source.html  _bot_8hpp.html  _bot_8hpp.js  _bot_8hpp_source.html  _bot_command_8hpp.html  _bot_command_8hpp.js  (+1573 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docs.yml  build-doxygen-docs.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build_ubuntu.yml
cmake/: find-or-fetch.cmake  install.cmake  tgbotxx-config.cmake  tgbotxx-dependencies.cmake
examples/Buttons/: README.md  main.cpp
examples/Buttons/InlineKeyboardButton/: CMakeLists.txt  README.md  main.cpp
examples/Buttons/ReplyKeyboardMarkup/: CMakeLists.txt  README.md  main.cpp
examples/CommandWithArgs/: CMakeLists.txt  README.md  main.cpp
examples/EarthquakeBot/: CMakeLists.txt  README.md  main.cpp
examples/EchoBot/: CMakeLists.txt  README.md  main.cpp
examples/ErrorHandling/: README.md
examples/LocalTelegramApiServer/: README.md
examples/PaidSubscriptionBot/: CMakeLists.txt  README.md
examples/PaidSubscriptionBot/src/: PaidSubscriptionBot.cpp  PaidSubscriptionBot.hpp  main.cpp
examples/PingBot/: CMakeLists.txt  README.md  main.cpp
examples/QrCodeBot/: CMakeLists.txt  README.md  main.cpp
examples/ThreadPoolBot/: CMakeLists.txt  README.md  main.cpp
examples/UrlShortenerBot/: CMakeLists.txt  README.md  main.cpp
examples/WeatherBot/: CMakeLists.txt  README.md  main.cpp
examples/audio/: CMakeLists.txt  main.cpp
examples/audio_bot/: README.md
examples/audio_bot/audios/: audio.m4a
examples/buttons/: CMakeLists.txt  README.md
examples/earthquake_bot/: CMakeLists.txt  README.md  main.cpp
examples/echo_bot/: CMakeLists.txt  README.md  main.cpp
examples/echo_bot_submodule/: CMakeLists.txt  README.md  main.cpp
examples/photo_bot/: CMakeLists.txt  README.md
examples/ping_bot/: README.md  main.cpp
examples/receiveAudio/: CMakeLists.txt  README.md  main.cpp
examples/receiveDocument/: CMakeLists.txt  README.md  main.cpp
examples/receivePhoto/: CMakeLists.txt  README.md  main.cpp
examples/receiveVideo/: CMakeLists.txt  README.md  main.cpp
examples/sendAudio/: CMakeLists.txt  README.md  main.cpp
examples/sendDocument/: CMakeLists.txt  README.md  main.cpp
examples/sendPhoto/: CMakeLists.txt  README.md  main.cpp
examples/sendPoll/: CMakeLists.txt  README.md  main.cpp
examples/sendVideo/: CMakeLists.txt  README.md  main.cpp
examples/urlshortener_bot/: CMakeLists.txt  README.md
html/: _animation_8hpp.html  _animation_8hpp_source.html  _api_8hpp.html  _api_8hpp_source.html  _audio_8hpp.html  _audio_8hpp_source.html  _bot_8hpp.html  _bot_8hpp_source.html  _bot_command_8hpp.html  _bot_command_8hpp_source.html  _bot_command_scope_8hpp.html  _bot_command_scope_8hpp_source.html  _callback_game_8hpp.html  _callback_game_8hpp_source.html  _callback_query_8hpp.html  _callback_query_8hpp_source.html  _chat_8hpp.html  _chat_8hpp_source.html  _chat_invite_link_8hpp.html  _chat_invite_link_8hpp_source.html  _chat_join_request_8hpp.html  _chat_join_request_8hpp_source.html  _chat_location_8hpp.html  _chat_location_8hpp_source.html  _chat_member_8hpp.html  _chat_member_8hpp_source.html  _chat_member_updated_8hpp.html  _chat_member_updated_8hpp_source.html  _chat_permissions_8hpp.html  _chat_permissions_8hpp_source.html  _chat_photo_8hpp.html  _chat_photo_8hpp_source.html  _chat_shared_8hpp.html  _chat_shared_8hpp_source.html  _chosen_inline_result_8hpp.html  _chosen_inline_result_8hpp_source.html  _contact_8hpp.html  _contact_8hpp_source.html  _dice_8hpp.html  _dice_8hpp_source.html  (+418 more)
html/search/: all_0.js  all_11.js  all_13.js  all_14.js  all_16.js  all_17.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_e.js  classes_f.js  enumvalues_1.js  enumvalues_5.js  enumvalues_8.js  enumvalues_9.js  files_1.js  files_10.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  files_c.js  files_d.js  functions_1.js  functions_11.js  (+24 more)
include/tgbotxx/: Api.hpp  Bot.hpp  Exception.hpp  tgbotxx.hpp
include/tgbotxx/objects/: AcceptedGiftTypes.hpp  AffiliateInfo.hpp  Animation.hpp  Audio.hpp  BackgroundFill.hpp  BackgroundType.hpp  Birthdate.hpp  BotCommand.hpp  BotCommandScope.hpp  BotDescription.hpp  BotName.hpp  BotShortDescription.hpp  BusinessBotRights.hpp  BusinessConnection.hpp  BusinessIntro.hpp  BusinessLocation.hpp  BusinessMessagesDeleted.hpp  BusinessOpeningHours.hpp  BusinessOpeningHoursInterval.hpp  Chat.hpp  (+168 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+102 more)
src/: Api.cpp  Bot.cpp
src/objects/: CallbackQuery.cpp  Chat.cpp  ChatFullInfo.cpp  Message.cpp  Update.cpp  User.cpp
tests/: CMakeLists.txt  manual_tests.cpp
tests/src/: TestApi.cpp  TestSerialization.cpp  TestUtils.cpp  test_serialization.cpp
(+4 files in other folders)
